--- a/src/less/about.less
+++ b/src/less/about.less
@@ -1,9 +1,16 @@
 .about{
-    padding-bottom: 100px;
-    padding-top: 80px;
+    padding-bottom: 0;
+    padding-top: 0;
     h3{
         margin-bottom: 50px;
         text-align: left;
+    }
+    .col-md-7{
+        border-right: 1px solid #dedede;
+        padding-top: 50px;
+    }
+    .col-md-4.col-md-offset-1{
+        padding-top: 50px;    
     }
     .content{
         font-size: 1.4rem;
