--- a/src/less/contact.less
+++ b/src/less/contact.less
@@ -2,12 +2,12 @@
 .contact{
     font-size: 1.4rem;
     padding-top: 75px;
-    padding-bottom: 40px;
+    padding-bottom: 300px;
     color: #a1a5ad;
     font-weight: 400;
     background-color: #696969;
     .form{
-        margin-bottom: 17px;
+        margin-bottom: 50px;
     }
     h3{
         margin-bottom: 40px;
@@ -87,19 +87,62 @@
         color: @black;
         padding: 30px 40px;
     }
-    ul{
-        li{
-            display: block;
-            
-            span{
+    .content{
+        ul{
+            margin-top: 12px;
+            li{
                 display: inline-block;
-                word-break: break-all;
-                line-height: 4.5rem;
-                &.first{
-                    font-weight: 700;
-                    margin-right: 10px;
-                    min-width: 80px;
-                    color: #56553f;
+                padding-left: 10px;
+                padding-right: 10px;
+                position: relative;
+                color: white;
+                &:first-child{
+                    padding-left: 90px;
+                    padding-right: 90px;
+                    &::before{
+                        content: "";
+                        height: 1px;
+                        width: 77px;
+                        background-color: #9a9a9a;
+                        display: inline-block;
+                        position: absolute;
+                        left: 0;
+                        top: 7px;
+                    }
+                    &::after{
+                        content: "";
+                        height: 1px;
+                        width: 77px;
+                        background-color: #9a9a9a;
+                        display: inline-block;
+                        position: absolute;
+                        right: 0;
+                        top: 7px;
+                    }
+                }
+                &:last-child{
+                    padding-left: 88px;
+                    padding-right: 90px;
+                    &::before{
+                        content: "";
+                        height: 1px;
+                        width: 77px;
+                        background-color: #9a9a9a;
+                        display: inline-block;
+                        position: absolute;
+                        left: 0;
+                        top: 7px;
+                    }
+                    &::after{
+                        content: "";
+                        height: 1px;
+                        width: 77px;
+                        background-color: #9a9a9a;
+                        display: inline-block;
+                        position: absolute;
+                        right: 0;
+                        top: 7px;
+                    }    
                 }
             }
         }
@@ -127,10 +170,15 @@
 }
 
 .section-map{
+//        position: relative;
+//        padding-top: 45px;
+//        padding-bottom: 45px;
+//        min-height: 580px;
+    margin-top: -250px;
+    .map{
         position: relative;
-        padding-top: 45px;
-        padding-bottom: 45px;
-        min-height: 580px;
+        min-height: 400px;
+    }
 }
 
 #map{
