--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -1,10 +1,10 @@
 
 footer{
-    background-color: #a1a5ad;
+    background-color: white;
     text-align: center;
     padding: 63px 0;
     font-size: 1.4rem;
-    color: white;
+    color: #696969;
     text-transform: uppercase;
     .social{
         text-align: center;
