--- a/src/less/header.less
+++ b/src/less/header.less
@@ -2,6 +2,7 @@ header{
     &.navbar{
         padding: 37px 0;
         //position: absolute;
+        margin-bottom: 0;
         top: 0;
         left: 0;
         width: 100%;
@@ -21,6 +22,7 @@ header{
     }
     nav{
         ul{
+            margin-top: 34px !important;
             li{
                 font-size: 1.6rem;
                 color: #333333;
