--- a/src/css/main.css
+++ b/src/css/main.css
@@ -229,6 +229,7 @@ a:hover {
 }
 header.navbar {
   padding: 37px 0;
+  margin-bottom: 0;
   top: 0;
   left: 0;
   width: 100%;
@@ -243,6 +244,9 @@ header.navbar .navbar-brand {
   padding-bottom: 0;
   height: auto;
   min-height: 0;
+}
+header nav ul {
+  margin-top: 34px !important;
 }
 header nav ul li {
   font-size: 1.6rem;
@@ -264,11 +268,11 @@ header .navbar-toggle .icon-bar {
   background-color: #56553f;
 }
 footer {
-  background-color: #a1a5ad;
+  background-color: white;
   text-align: center;
   padding: 63px 0;
   font-size: 1.4rem;
-  color: white;
+  color: #696969;
   text-transform: uppercase;
 }
 footer .social {
@@ -308,15 +312,28 @@ footer .social li.youtube a {
   background-position: -172px 0;
 }
 /* blocks */
-#top {
-  margin-bottom: 55px;
-}
 #top #slider-top {
   height: 688px;
 }
 #top #slider-top .item {
   text-align: center;
   padding-top: 200px;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 688px;
+}
+#top #slider-top .item .scroll {
+  font-size: 1.4rem;
+  color: white;
+  font-family: 'Playfair Display', serif;
+  position: absolute;
+  bottom: 25px;
+  left: 50%;
+  margin-left: -45px;
+}
+#top #slider-top .item .scroll img {
+  margin-bottom: 37px;
 }
 #top #slider-top .item .caption {
   color: white;
@@ -367,22 +384,19 @@ footer .social li.youtube a {
   background-image: url(../img/ico_right_slider_top.png);
 }
 #top #slider-top .owl-controls {
-  bottom: 0;
   position: absolute;
-  right: 0;
+  width: 100%;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+          transform: translateY(-50%);
 }
 #top #slider-top .owl-controls .owl-pagination {
   display: none;
 }
-#top #slider-top .owl-controls .owl-buttons {
-  position: relative;
-}
 #top #slider-top .owl-controls .owl-buttons div {
-  width: 37px;
-  height: 37px;
-  background-color: #21282f;
-  opacity: 0.7;
-  border-radius: 5px;
+  width: 18px;
+  height: 30px;
   background-repeat: no-repeat;
   background-position: center center;
   position: absolute;
@@ -391,19 +405,26 @@ footer .social li.youtube a {
 }
 #top #slider-top .owl-controls .owl-buttons div.owl-prev {
   background-image: url(../img/ico_left_slider_top.png);
-  right: 42px;
+  left: -30px;
 }
 #top #slider-top .owl-controls .owl-buttons div.owl-next {
   background-image: url(../img/ico_right_slider_top.png);
-  right: 0;
+  right: -30px;
 }
 .about {
-  padding-bottom: 100px;
-  padding-top: 80px;
+  padding-bottom: 0;
+  padding-top: 0;
 }
 .about h3 {
   margin-bottom: 50px;
   text-align: left;
+}
+.about .col-md-7 {
+  border-right: 1px solid #dedede;
+  padding-top: 50px;
+}
+.about .col-md-4.col-md-offset-1 {
+  padding-top: 50px;
 }
 .about .content {
   font-size: 1.4rem;
@@ -648,104 +669,75 @@ footer .social li.youtube a {
   margin-left: -1px;
 }
 .testimonials {
-  padding: 87px 0;
   position: relative;
   z-index: 9999;
+}
+.testimonials .container {
+  background-color: #f5f5f5;
+  background-image: url(../img/testimonials_bg.jpg);
+  background-repeat: repeat-y;
+  background-position: top center;
+  padding: 0;
+  padding-top: 60px;
 }
 .testimonials h3 {
   font-weight: 400;
   margin-bottom: 66px;
 }
 .testimonials #slider-testimonials {
-  width: 90%;
   margin: 0 auto;
   font-size: 1.4rem;
-  font-weight: 400;
-  line-height: 2.4rem;
-  text-align: left;
+  line-height: 3.2rem;
+  text-align: justify;
   text-shadow: none;
-  color: #a1a5ad;
-  font-weight: 700;
-  padding-left: 50px;
+  color: #747474;
+  font-style: italic;
+  font-weight: 400;
   padding-bottom: 70px;
   position: relative;
 }
 .testimonials #slider-testimonials .carousel-caption {
-  position: relative;
-  left: 0;
-  right: 0;
-  top: 0;
   text-align: left;
   text-shadow: none;
-  padding-right: 240px;
   color: #a1a5ad;
   padding-top: 0;
 }
-.testimonials #slider-testimonials .person {
-  position: absolute;
-  top: 0;
-  right: 0;
-}
-.testimonials #slider-testimonials .person .left {
-  display: inline-block;
-  vertical-align: middle;
-  margin-right: 15px;
-}
-.testimonials #slider-testimonials .person .right {
-  display: inline-block;
-  vertical-align: middle;
-}
-.testimonials #slider-testimonials .carousel-indicators {
-  bottom: 0;
-}
-.testimonials #slider-testimonials .carousel-indicators li {
-  width: 14px;
-  height: 14px;
-  margin: 0;
-}
-.testimonials #slider-testimonials::before {
-  content: '';
-  background-image: url(../img/ico_quote.png);
+.testimonials #slider-testimonials .item .left {
+  width: 49.5%;
+  float: left;
+  background-image: url(../img/person_left.png);
+  background-position: left top;
   background-repeat: no-repeat;
-  background-position: 0px 0px;
-  position: absolute;
-  left: 0px;
-  top: 0px;
-  width: 36px;
-  height: 26px;
+  padding-left: 220px;
+  padding-top: 110px;
+  padding-bottom: 90px;
+  padding-right: 60px;
+  text-align: left;
+  margin-right: 2px;
 }
-.testimonials #slider-testimonials .carousel-control {
-  background-image: none;
-  width: 37px;
-  height: 37px;
-  background-color: #21282f;
-  z-index: 10;
-  bottom: 0 !important;
-  top: auto;
+.testimonials #slider-testimonials .item .right {
+  width: 49.5%;
+  float: left;
+  background-image: url(../img/person_right.png);
   background-repeat: no-repeat;
-  background-position: center center;
-  border-radius: 5px;
-  opacity: 0.7;
-  -webkit-transition: all 0.8s ease 0s;
-          transition: all 0.8s ease 0s;
+  background-position: right top;
+  padding-right: 220px;
+  padding-top: 110px;
+  padding-left: 60px;
+  padding-bottom: 90px;
+  text-align: right;
 }
-.testimonials #slider-testimonials .carousel-control:hover {
-  background-color: #4cc85e;
-  -webkit-transition: all 0.8s ease 0s;
-          transition: all 0.8s ease 0s;
-  opacity: 1;
+.testimonials #slider-testimonials .item .person p {
+  font-size: 1.4;
+  font-family: 'Playfair Display', serif;
+  line-height: 2rem;
+  font-style: normal;
 }
-.testimonials #slider-testimonials .carousel-control.left {
-  background-image: url(../img/ico_left_slider_top.png);
-  left: 0;
-  right: auto;
-}
-.testimonials #slider-testimonials .carousel-control.right {
-  background-image: url(../img/ico_right_slider_top.png);
-  left: 40px;
-  right: auto;
+.testimonials #slider-testimonials .item .person p:first-child {
+  font-size: 1.6rem;
 }
 .testimonials #slider-testimonials .owl-controls {
+  display: none !important;
   bottom: 0;
   position: absolute;
   left: 0;
@@ -779,13 +771,13 @@ footer .social li.youtube a {
 .contact {
   font-size: 1.4rem;
   padding-top: 75px;
-  padding-bottom: 40px;
+  padding-bottom: 300px;
   color: #a1a5ad;
   font-weight: 400;
   background-color: #696969;
 }
 .contact .form {
-  margin-bottom: 17px;
+  margin-bottom: 50px;
 }
 .contact h3 {
   margin-bottom: 40px;
@@ -863,19 +855,63 @@ footer .social li.youtube a {
   color: #21282f;
   padding: 30px 40px;
 }
-.contact ul li {
-  display: block;
+.contact .content ul {
+  margin-top: 12px;
 }
-.contact ul li span {
+.contact .content ul li {
   display: inline-block;
-  word-break: break-all;
-  line-height: 4.5rem;
+  padding-left: 10px;
+  padding-right: 10px;
+  position: relative;
+  color: white;
 }
-.contact ul li span.first {
-  font-weight: 700;
-  margin-right: 10px;
-  min-width: 80px;
-  color: #56553f;
+.contact .content ul li:first-child {
+  padding-left: 90px;
+  padding-right: 90px;
+}
+.contact .content ul li:first-child::before {
+  content: "";
+  height: 1px;
+  width: 77px;
+  background-color: #9a9a9a;
+  display: inline-block;
+  position: absolute;
+  left: 0;
+  top: 7px;
+}
+.contact .content ul li:first-child::after {
+  content: "";
+  height: 1px;
+  width: 77px;
+  background-color: #9a9a9a;
+  display: inline-block;
+  position: absolute;
+  right: 0;
+  top: 7px;
+}
+.contact .content ul li:last-child {
+  padding-left: 88px;
+  padding-right: 90px;
+}
+.contact .content ul li:last-child::before {
+  content: "";
+  height: 1px;
+  width: 77px;
+  background-color: #9a9a9a;
+  display: inline-block;
+  position: absolute;
+  left: 0;
+  top: 7px;
+}
+.contact .content ul li:last-child::after {
+  content: "";
+  height: 1px;
+  width: 77px;
+  background-color: #9a9a9a;
+  display: inline-block;
+  position: absolute;
+  right: 0;
+  top: 7px;
 }
 .contact table {
   width: 100%;
@@ -896,10 +932,11 @@ footer .social li.youtube a {
   vertical-align: middle;
 }
 .section-map {
+  margin-top: -250px;
+}
+.section-map .map {
   position: relative;
-  padding-top: 45px;
-  padding-bottom: 45px;
-  min-height: 580px;
+  min-height: 400px;
 }
 #map {
   width: 100%;
@@ -911,6 +948,12 @@ footer .social li.youtube a {
   .top #slider-top {
     width: 100% !important;
   }
+  .testimonials .item .left {
+    width: 100% !important;
+  }
+  .testimonials .item .right {
+    width: 100% !important;
+  }
   .testimonials .testimontials_slider {
     width: 100%;
   }
@@ -920,13 +963,19 @@ footer .social li.youtube a {
   .gallery_description h4 {
     top: 50%;
   }
+  .one-of-four {
+    width: 50%;
+  }
 }
 @media (max-width: 768px) {
   .one-of-four {
     width: 50%;
   }
+  #top #slider-top .owl-controls {
+    display: none !important;
+  }
   header .navbar-header .navbar-toggle {
-    margin-top: 0;
+    margin-top: 35px;
   }
   header .navbar-header .navbar-brand {
     margin-top: 6px;
@@ -938,15 +987,11 @@ footer .social li.youtube a {
   .counter-section article {
     margin-bottom: 20px;
   }
-  .testimonials .testimontials_slider {
-    padding-right: 110px;
+  #slider-testimonials .item .left {
+    padding-right: 0 !important;
   }
-  .testimonials .testimontials_slider .item .carousel-caption {
-    padding-right: 0;
-    width: 100%;
-  }
-  .testimonials .testimontials_slider .item .person {
-    position: relative;
+  #slider-testimonials .item .right {
+    padding-left: 0 !important;
   }
   .section-map .content {
     width: 100%;
