--- a/src/css/main.css
+++ b/src/css/main.css
@@ -2,6 +2,8 @@
 @import "../css/bootstrap-theme.min.css";
 @import "../css/libs/animate.css";
 @import "../css/jquery.fancybox.css";
+@import "../css/owl.carousel.css";
+@import "../css/scroll.css";
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -228,7 +230,7 @@ a:hover {
   color: white;
 }
 header.navbar {
-  padding: 37px 0;
+  padding: 50px 0 20px 0;
   margin-bottom: 0;
   top: 0;
   left: 0;
@@ -245,8 +247,13 @@ header.navbar .navbar-brand {
   height: auto;
   min-height: 0;
 }
+header nav {
+  text-align: center;
+}
 header nav ul {
-  margin-top: 34px !important;
+  margin-top: 41px !important;
+  float: none !important;
+  display: inline-block;
 }
 header nav ul li {
   font-size: 1.6rem;
@@ -312,12 +319,15 @@ footer .social li.youtube a {
   background-position: -172px 0;
 }
 /* blocks */
+#top {
+  position: relative;
+}
 #top #slider-top {
   height: 688px;
 }
 #top #slider-top .item {
   text-align: center;
-  padding-top: 200px;
+  padding-top: 14%;
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -344,7 +354,7 @@ footer .social li.youtube a {
 #top #slider-top .item .caption h2 {
   font-size: 6.2rem;
   font-family: 'Playfair Display', serif;
-  margin-bottom: 35px;
+  margin-bottom: 31px;
 }
 #top #slider-top .item .caption p {
   font-size: 1.6rem;
@@ -405,30 +415,30 @@ footer .social li.youtube a {
 }
 #top #slider-top .owl-controls .owl-buttons div.owl-prev {
   background-image: url(../img/ico_left_slider_top.png);
-  left: -30px;
+  left: -43px;
 }
 #top #slider-top .owl-controls .owl-buttons div.owl-next {
   background-image: url(../img/ico_right_slider_top.png);
-  right: -30px;
+  right: -43px;
 }
 .about {
   padding-bottom: 0;
   padding-top: 0;
 }
 .about h3 {
-  margin-bottom: 50px;
+  margin-bottom: 41px;
   text-align: left;
 }
 .about .col-md-7 {
   border-right: 1px solid #dedede;
-  padding-top: 50px;
+  padding-top: 83px;
 }
 .about .col-md-4.col-md-offset-1 {
-  padding-top: 50px;
+  padding-top: 73px;
 }
 .about .content {
   font-size: 1.4rem;
-  line-height: 3rem;
+  line-height: 2.8rem;
   text-align: left;
   margin-bottom: 100px;
   color: #757575;
@@ -442,7 +452,7 @@ footer .social li.youtube a {
   padding-bottom: 40px;
 }
 .about article h4 {
-  margin-bottom: 45px;
+  margin-bottom: 14px;
 }
 .about article p {
   line-height: 2.4rem;
@@ -463,9 +473,8 @@ footer .social li.youtube a {
   background-attachment: fixed;
   font-size: 3.2rem;
   line-height: 4.8rem;
-  text-transform: uppercase;
-  padding-top: 430px;
-  padding-bottom: 120px;
+  padding-top: 32%;
+  padding-bottom: 102px;
   text-align: left;
   color: #333333;
   font-weight: 400;
@@ -476,17 +485,17 @@ footer .social li.youtube a {
 }
 .quote .content h5 {
   font-size: 4.4rem;
-  margin-bottom: 85px;
+  margin-bottom: 44px;
 }
 .quote .content p {
   font-size: 1.8rem;
-  line-height: 2.4rem;
+  line-height: 2.2rem;
 }
 .features {
-  padding: 75px 0;
+  padding: 54px 0;
 }
 .features h3 {
-  margin-bottom: 65px;
+  margin-bottom: 23px;
 }
 .features .inner {
   clear: both;
@@ -497,13 +506,15 @@ footer .social li.youtube a {
 }
 .features article {
   font-size: 1.6rem;
-  margin-bottom: 27px;
+  margin-bottom: 33px;
   padding: 40px 15px;
+  margin-left: 10px;
+  margin-right: 10px;
   font-weight: 400;
 }
 .features article h4 {
   font-size: 2.6rem;
-  margin-bottom: 35px;
+  margin-bottom: 24px;
 }
 .features article p {
   line-height: 2.4rem;
@@ -511,10 +522,10 @@ footer .social li.youtube a {
 }
 /* gallery */
 .gallery {
-  padding-top: 90px;
+  padding-top: 2px;
 }
 .gallery h3 {
-  margin-bottom: 56px;
+  margin-bottom: 80px;
 }
 .fancybox-skin {
   background-color: transparent;
@@ -532,7 +543,7 @@ footer .social li.youtube a {
   max-width: 100%;
 }
 .gallery-box:hover {
-  z-index: 999999;
+  z-index: 999;
 }
 .gallery_description {
   position: absolute;
@@ -597,7 +608,7 @@ footer .social li.youtube a {
 .counter-section {
   padding-top: 60px;
   padding-bottom: 80px;
-  font-weight: 300;
+  font-weight: 400;
   color: #333333;
   font-family: 'Playfair Display', serif;
 }
@@ -608,11 +619,9 @@ footer .social li.youtube a {
 }
 .counter-section article div {
   font-size: 2.4rem;
-  text-transform: uppercase;
 }
 .counter-section article div.middle {
   font-size: 8rem;
-  font-weight: 300;
   position: relative;
   padding: 30px 0 45px 0;
 }
@@ -623,7 +632,7 @@ footer .social li.youtube a {
   height: 25px;
   width: 1px;
   position: absolute;
-  top: 0;
+  top: 11px;
   left: 50%;
   margin-left: -1px;
 }
@@ -639,7 +648,7 @@ footer .social li.youtube a {
   margin-left: -1px;
 }
 .counter-section article div.bottom {
-  margin-top: 40px;
+  margin-top: 20px;
   padding-bottom: 80px;
 }
 .counter-section article div.bottom::after {
@@ -654,8 +663,8 @@ footer .social li.youtube a {
   margin-left: -1px;
 }
 .counter-section article div.top {
-  margin-bottom: 40px;
-  padding-top: 80px;
+  margin-bottom: 0;
+  padding-top: 73px;
 }
 .counter-section article div.top::before {
   content: "";
@@ -670,7 +679,7 @@ footer .social li.youtube a {
 }
 .testimonials {
   position: relative;
-  z-index: 9999;
+  z-index: 99;
 }
 .testimonials .container {
   background-color: #f5f5f5;
@@ -683,6 +692,7 @@ footer .social li.youtube a {
 .testimonials h3 {
   font-weight: 400;
   margin-bottom: 66px;
+  letter-spacing: 0;
 }
 .testimonials #slider-testimonials {
   margin: 0 auto;
@@ -693,39 +703,43 @@ footer .social li.youtube a {
   color: #747474;
   font-style: italic;
   font-weight: 400;
-  padding-bottom: 70px;
+  padding-bottom: 0;
   position: relative;
 }
 .testimonials #slider-testimonials .carousel-caption {
-  text-align: left;
+  text-align: justify;
   text-shadow: none;
-  color: #a1a5ad;
+  color: #747474;
   padding-top: 0;
+  letter-spacing: 0.1em;
 }
 .testimonials #slider-testimonials .item .left {
-  width: 49.5%;
+  width: 49.8%;
   float: left;
   background-image: url(../img/person_left.png);
   background-position: left top;
   background-repeat: no-repeat;
   padding-left: 220px;
-  padding-top: 110px;
+  padding-top: 10px;
   padding-bottom: 90px;
   padding-right: 60px;
   text-align: left;
   margin-right: 2px;
 }
 .testimonials #slider-testimonials .item .right {
-  width: 49.5%;
+  width: 49.8%;
   float: left;
   background-image: url(../img/person_right.png);
   background-repeat: no-repeat;
   background-position: right top;
   padding-right: 220px;
-  padding-top: 110px;
+  padding-top: 10px;
   padding-left: 60px;
   padding-bottom: 90px;
   text-align: right;
+}
+.testimonials #slider-testimonials .item .person {
+  margin-top: 45px;
 }
 .testimonials #slider-testimonials .item .person p {
   font-size: 1.4;
@@ -813,18 +827,18 @@ footer .social li.youtube a {
   min-height: 125px;
 }
 .contact ::-webkit-input-placeholder {
-  color: #9a9a9a;
+  color: rgba(255, 255, 255, 0.6);
 }
 .contact :-moz-placeholder {
   /* Firefox 18- */
-  color: #9a9a9a;
+  color: rgba(255, 255, 255, 0.6);
 }
 .contact ::-moz-placeholder {
   /* Firefox 19+ */
-  color: #9a9a9a;
+  color: rgba(255, 255, 255, 0.6);
 }
 .contact :-ms-input-placeholder {
-  color: #9a9a9a;
+  color: rgba(255, 255, 255, 0.6);
 }
 .contact .button {
   background-color: transparent;
@@ -944,6 +958,50 @@ footer .social li.youtube a {
   position: absolute !important;
   top: 0;
 }
+@media (max-width: 767px) {
+  .container_over {
+    width: 100%;
+  }
+  #slider-top .owl-controls {
+    display: none !important;
+  }
+}
+@media (min-width: 768px) {
+  .container_over {
+    width: 750px;
+  }
+  #slider-top .owl-controls {
+    display: none !important;
+  }
+}
+@media (min-width: 991px) {
+  .container_over {
+    width: 970px;
+  }
+}
+@media (min-width: 1200px) {
+  .container_over {
+    width: 1170px;
+  }
+}
+@media (min-width: 1290px) {
+  .container_over {
+    width: 1170px;
+  }
+  #slider-top .owl-controls {
+    display: block !important;
+  }
+}
+@media (min-width: 1370px) {
+  .container_over {
+    width: 1250px;
+  }
+}
+@media (min-width: 1480px) {
+  .container_over {
+    width: 1360px;
+  }
+}
 @media (max-width: 991px) {
   .top #slider-top {
     width: 100% !important;
@@ -966,19 +1024,65 @@ footer .social li.youtube a {
   .one-of-four {
     width: 50%;
   }
+  .about .col-md-7 {
+    border-right: 0;
+  }
+  #contact .content ul li {
+    display: block;
+    text-align: center;
+    margin-bottom: 10px;
+  }
+  #contact .content ul li::after {
+    background-color: #9a9a9a;
+    content: "";
+    display: inline-block;
+    height: 1px;
+    position: absolute;
+    right: 0;
+    top: 7px;
+    width: 77px;
+  }
+  #contact .content ul li::before {
+    background-color: #9a9a9a;
+    content: "";
+    display: inline-block;
+    height: 1px;
+    left: 0;
+    position: absolute;
+    top: 7px;
+    width: 77px;
+  }
 }
 @media (max-width: 768px) {
+  header {
+    position: fixed !important;
+    padding-top: 20px !important;
+    background-color: white !important;
+    z-index: 999 !important;
+  }
+  header nav {
+    text-align: left;
+  }
+  main {
+    margin-top: 136px;
+  }
   .one-of-four {
     width: 50%;
   }
   #top #slider-top .owl-controls {
     display: none !important;
   }
+  header.navbar {
+    height: 136px;
+  }
   header .navbar-header .navbar-toggle {
     margin-top: 35px;
   }
   header .navbar-header .navbar-brand {
     margin-top: 6px;
+  }
+  header .navbar-collapse {
+    background-color: white;
   }
   header nav ul li a {
     padding-top: 10px !important;
@@ -1006,7 +1110,6 @@ footer .social li.youtube a {
   width: 100%;
 }
 .container_over {
-  width: 1380px;
   margin: 0 auto;
 }
 body,
@@ -1022,6 +1125,12 @@ body {
   margin: 0;
   position: relative;
 }
+.wow:first-child {
+  visibility: hidden;
+}
+.scroll-btn {
+  font-family: 'Playfair Display', serif;
+}
 /* Preloader */
 #preloader {
   position: fixed;
@@ -1031,7 +1140,7 @@ body {
   bottom: 0;
   background-color: #0c0c0c;
   /* change if the mask should have another color then white */
-  z-index: 99;
+  z-index: 9999;
   /* makes sure it stays on top */
 }
 #status {
