--- a/src/less/header.less
+++ b/src/less/header.less
@@ -1,6 +1,6 @@
 header{
     &.navbar{
-        padding: 37px 0;
+        padding: 50px 0 20px 0;
         //position: absolute;
         margin-bottom: 0;
         top: 0;
@@ -21,8 +21,11 @@ header{
         }
     }
     nav{
+        text-align: center;
         ul{
-            margin-top: 34px !important;
+            margin-top: 41px !important;
+            float: none !important;
+            display: inline-block;
             li{
                 font-size: 1.6rem;
                 color: #333333;
