--- a/src/less/main.less
+++ b/src/less/main.less
@@ -2,6 +2,8 @@
 @import "../css/bootstrap-theme.min.css";
 @import "../css/libs/animate.css";
 @import "../css/jquery.fancybox.css";
+@import "../css/owl.carousel.css";
+@import "../css/scroll.css";
 @import "reset";
 @import "typo";
 @import "vars";
@@ -28,7 +30,7 @@
     width: 100%;
 }
 .container_over{
-    width: 1380px;
+    //width: 1380px;
     margin: 0 auto;
 }
 body, html{
@@ -42,8 +44,17 @@ body{
     right: 0;
     margin: 0;
     position: relative;
+//    background-image: url(../img/layout_5.jpg);
+//    background-repeat: no-repeat;
+//    background-position: top center;
+//    opacity: 0.5;
 }
-
+.wow:first-child {
+    visibility: hidden;
+}
+.scroll-btn{
+    font-family: @font2;
+}
 /* Preloader */
 #preloader {
 	position: fixed;
@@ -52,7 +63,7 @@ body{
 	right:0;
 	bottom:0;
 	background-color:#0c0c0c; /* change if the mask should have another color then white */
-	z-index:99; /* makes sure it stays on top */
+	z-index:9999; /* makes sure it stays on top */
 }
 
 @boxSize: 15;
