--- a/src/less/responsive.less
+++ b/src/less/responsive.less
@@ -1,7 +1,59 @@
-@media (min-width:769px){
-    
+@media(max-width: 767px){
+    .container_over{
+        width: 100%;
+    }
+    #slider-top{
+        
+        .owl-controls{
+            display: none !important;
+        }
+    }
 }
+@media(min-width: 768px){
+    .container_over{
+        width: 750px;
+    }
+    #slider-top{
+        .owl-controls{
+            display: none !important;
+        }
+    }
+}
+@media(min-width: 991px){
+    .container_over{
+        width: 970px;
+    }
+}
+@media(min-width: 1200px){
+    .container_over{
+        width: 1170px;
+    }
+}
+@media(min-width: 1290px){
+    .container_over{
+        width: 1170px;
+    }
+    #slider-top{
+        .owl-controls{
+            display: block !important;
+        }
+    }
+}
+@media(min-width: 1370px){
+    .container_over{
+        width: 1250px;
+    }
+}
+@media(min-width: 1480px){
+    .container_over{
+        width: 1360px;
+    }
+}
+
+
+
 @media (max-width:991px){
+    
     .top{
         #slider-top{
             width: 100% !important;
@@ -33,8 +85,56 @@
     .one-of-four{
         width: 50%;
     }
+    .about{
+        .col-md-7{
+            border-right: 0;
+        }
+    }
+    #contact{
+        .content{
+            ul{
+                li{
+                    display: block;
+                    text-align: center;
+                    margin-bottom: 10px;
+                    &::after{
+                        background-color: #9a9a9a;
+                        content: "";
+                        display: inline-block;
+                        height: 1px;
+                        position: absolute;
+                        right: 0;
+                        top: 7px;
+                        width: 77px;
+                    }
+                    &::before{
+                        background-color: #9a9a9a;
+                        content: "";
+                        display: inline-block;
+                        height: 1px;
+                        left: 0;
+                        position: absolute;
+                        top: 7px;
+                        width: 77px;
+                    }
+                }
+            }
+        }
+    }
 }
 @media (max-width:768px){
+    header{
+        position: fixed !important;
+        padding-top: 20px !important;
+        background-color: white !important;
+        z-index: 999 !important;
+        nav{
+            text-align: left;
+        }
+    }
+    main{
+        margin-top: 136px;
+    }
     .one-of-four{
         width: 50%;
     }
@@ -46,6 +146,9 @@
         }     
     } 
     header{
+        &.navbar{
+            height: 136px;
+        }
         .navbar-header{
             .navbar-toggle{
                 margin-top: 35px;
@@ -54,6 +157,9 @@
                 margin-top: 6px;
             }
             
+        }
+        .navbar-collapse{
+            background-color: white;
         }
         nav{
             ul{
