--- a/src/less/contact.less
+++ b/src/less/contact.less
@@ -43,19 +43,19 @@
         min-height: 125px;
     }
     ::-webkit-input-placeholder {
-       color: #9a9a9a;
+       color: rgba(255, 255, 255, 0.6);
     }
 
     :-moz-placeholder { /* Firefox 18- */
-       color: #9a9a9a;  
+       color: rgba(255, 255, 255, 0.6);
     }
 
     ::-moz-placeholder {  /* Firefox 19+ */
-       color: #9a9a9a;  
+       color: rgba(255, 255, 255, 0.6);
     }
 
     :-ms-input-placeholder {  
-       color: #9a9a9a;  
+       color: rgba(255, 255, 255, 0.6);
     }
     .button{
         background-color: transparent;
