--- a/src/less/counter.less
+++ b/src/less/counter.less
@@ -1,7 +1,7 @@
 .counter-section{
     padding-top: 60px;
     padding-bottom: 80px;
-    font-weight: 300;
+    font-weight: 400;
     color: #333333;
     font-family: @font2;
     article{
@@ -13,10 +13,9 @@
        
         div{
             font-size: 2.4rem;
-            text-transform: uppercase;
+            
             &.middle{
                 font-size: 8rem;
-                font-weight: 300;
                 position: relative;
                 padding: 30px 0 45px 0;
                 &::before{
@@ -26,7 +25,7 @@
                     height: 25px;
                     width: 1px;
                     position: absolute;
-                    top: 0;
+                    top: 11px;
                     left: 50%;
                     margin-left: -1px;
                 }
@@ -43,7 +42,7 @@
                 }
             }
             &.bottom{
-                margin-top: 40px;
+                margin-top: 20px;
                 padding-bottom: 80px;
                 &::after{
                     content: "";
@@ -58,8 +57,8 @@
                 }
             }
             &.top{
-                margin-bottom: 40px;
-                padding-top: 80px;
+                margin-bottom:  0;
+                padding-top: 73px;
                 &::before{
                     content: "";
                     display: inline-block;
