--- a/src/less/features.less
+++ b/src/less/features.less
@@ -1,7 +1,7 @@
 .features{
-    padding: 75px 0;
+    padding: 54px 0;
     h3{
-        margin-bottom: 65px;
+        margin-bottom: 23px;
     }
     .inner{
         clear: both;
@@ -12,14 +12,16 @@
     }
     article{
         font-size: 1.6rem;
-        margin-bottom: 27px;
+        margin-bottom: 33px;
         padding: 40px 15px;
+        margin-left: 10px;
+        margin-right: 10px;
         //border-bottom: 4px solid #4cc85e;
         font-weight: 400;
         h4{
             font-size:  2.6rem;
             
-            margin-bottom: 35px;
+            margin-bottom: 24px;
         }
         p{
             line-height: 2.4rem;
