--- a/src/less/quote.less
+++ b/src/less/quote.less
@@ -6,9 +6,8 @@
     background-attachment: fixed;
     font-size: 3.2rem;
     line-height: 4.8rem;
-    text-transform: uppercase;
-    padding-top: 430px;
-    padding-bottom: 120px;
+    padding-top: 32%;
+    padding-bottom: 102px;
     text-align: left;
     color: #333333;
     font-weight: 400;
@@ -18,11 +17,11 @@
         
         h5{
             font-size: 4.4rem;   
-            margin-bottom: 85px;
+            margin-bottom: 44px;
         }
         p{
             font-size: 1.8rem;
-            line-height: 2.4rem;
+            line-height: 2.2rem;
         }
         
     }
