--- a/src/less/testimonials.less
+++ b/src/less/testimonials.less
@@ -1,7 +1,7 @@
 .testimonials{
     
     position: relative;
-    z-index: 9999;
+    z-index: 99;
     .container{
         background-color: #f5f5f5;
         background-image: url(../img/testimonials_bg.jpg);
@@ -14,6 +14,7 @@
     h3{
         font-weight: 400;
         margin-bottom: 66px;
+        letter-spacing: 0;
     }
     
     #slider-testimonials{
@@ -28,43 +29,45 @@
         font-style: italic;
         font-weight: 400;
        
-        padding-bottom: 70px;
+        padding-bottom: 0;
         position: relative;
         .carousel-caption{
-            text-align: left;
+            text-align: justify;
             text-shadow: none;
-            color: #a1a5ad;
+            color: #747474;
             padding-top: 0;
+            letter-spacing: 0.1em;
         }
         .item{
             .left{
-                width: 49.5%;
+                width: 49.8%;
                 float: left;
                 //background-color: #f5f5f5;
                 background-image: url(../img/person_left.png);
                 background-position: left top;
                 background-repeat: no-repeat;
                 padding-left: 220px;
-                padding-top: 110px;
+                padding-top: 10px;
                 padding-bottom: 90px;
                 padding-right: 60px;
                 text-align: left;
                 margin-right: 2px;
             }
             .right{
-                width: 49.5%;
+                width: 49.8%;
                 float: left;    
                 //background-color: #f5f5f5;
                 background-image: url(../img/person_right.png);
                 background-repeat: no-repeat;
                 background-position: right top;
                 padding-right: 220px;
-                padding-top: 110px;
+                padding-top: 10px;
                 padding-left: 60px;
                 padding-bottom: 90px;
                 text-align: right;
             }
             .person{
+                margin-top: 45px;
                 p{
                     font-size: 1.4;
                     font-family: @font2;
