--- a/src/less/top.less
+++ b/src/less/top.less
@@ -1,10 +1,10 @@
 #top{
-    
+    position: relative;
     #slider-top{
         height: 688px;
             .item{
                 text-align: center;
-                padding-top: 200px;
+                padding-top: 14%;
                 background-position: center center;
                 background-repeat: no-repeat;
                 background-size: cover;
@@ -29,7 +29,7 @@
                     h2{
                         font-size: 6.2rem;
                         font-family: @font2;
-                        margin-bottom: 35px;
+                        margin-bottom: 31px;
                     }
                     p{
                         font-size: 1.6rem;
@@ -40,28 +40,6 @@
                         padding: 13px 23px;
                     }
                 }
-//                .carousel-caption{
-//                    text-align: left;
-//                    font-size: 1.6rem;
-//                    line-height: 3rem;
-//                    position: relative;
-//                    left: 0;
-//                    right: auto;
-//                    bottom: auto;
-//                    top: auto;
-//                    padding: 0;
-//                    text-shadow: none;
-//                    h2{
-//                        font-size: 4.6rem;
-//                        line-height: 5.5rem;
-//                        text-transform: uppercase;
-//                        font-weight: 700;
-//                        margin-bottom: 35px;
-//                    }
-//                    a{
-//                        margin-top: 30px;
-//                    }
-//                }
             }     
         .carousel-control{
             background-image: none;
@@ -111,14 +89,15 @@
                     text-indent: -1000em;
                     &.owl-prev{
                         background-image: url(../img/ico_left_slider_top.png); 
-                        left: -30px;
+                        left: -43px;
                     }
                     &.owl-next{
                         background-image: url(../img/ico_right_slider_top.png); 
-                        right: -30px;
+                        right: -43px;
                     }
                 }
             }
         }
+        
     }
 }
